# rfx

./: .gitignore  .test_durations  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  benchmark_results.json  pyproject.toml
.github/workflows/: lint.yml  pr-tests.yml  public-docs-source.yml  studio-packaging.yml  test.yml  validation.yml
.omx/plans/: hybrid-adjoint-macro-roadmap.md
docs/: .gitignore
docs/agent/: auto-config.mdx  (+12 more)
docs/agent-memory/: index.md  nu_known_limits.md
examples/: 01_cavity_resonance.py  02_waveguide_sparams.py  03_inverse_design.py  04_patch_antenna.py  05_materials_gallery.py  05_patch_antenna_subgrid.py  06_farfield_radiation.py  06_patch_uniform_ref.py  07_auto_configure.py  07_peak_diagnostic.py  08_convergence_test.py  08_gpu_benchmark.py  09_agent_friendly_workflow.py  09_e2e_feature_validation.py  09_patch_fixed.py  10_patch_point_source.py  11_convergence_verified.py  12_validation_suite.py  13_patch_profiled.py  14_microstrip_line.py  14_subpixel_test.py  15_coupled_filter.py  15_fine_grid_test.py  16_dielectric_resonator.py  16_substrate_taper.py  17_volume_comp.py  17_waveguide_coupler.py  18_cavity_filter.py  18_j_source_test.py  19_lumped_rlc.py  19_simulator_validation.py  20_convergence_0125.py  20_via_throughhole.py  21_curved_patch.py  21_subgrid_jit_patch.py  22_subgridded.py  22_validation_breadth.py  23_cross_validation.py  24_patch_sub1pct.py  25_snap_dx_test.py  (+33 more)
gallery-deploy/: DEPLOYMENT.md  RfxGalleryViewer.astro  astro.config.sidebar.snippet.mjs  build-astro.snippet.sh
rfx/: __init__.py  ad_diagnostics.py  adi.py  amr.py  animation.py  antenna.py  api.py  artifacts.py  auto_config.py  batch.py  calibration_identifiability.py  checkpoint.py  cli.py  convergence.py  deembed.py  diagnostics.py  differentiable_material_fit.py  eigenmode.py  farfield.py  floquet.py  gpu.py  grid.py  harminv.py  hybrid_adjoint.py  io.py  jax_checks.py  lumped.py  material_fit.py  mesh_planner.py  microstrip.py  nonuniform.py  ntff_sweep.py  operations.py  optimize.py  optimize_objectives.py  pareto.py  pcb.py  preflight.py  profiling.py  rcs.py  (+11 more)
scripts/: _aperture_trapezoidal_test.py  _aperture_trim_test.py  _gallery_v3_ar_coating_figs.py  _gallery_v3_fresnel_figs.py  _gallery_v3_patch_figs.py  _gallery_v3_slab_ad_figs.py  _gallery_v3_waveguide_figs.py  _pec_sigma_runner_inner.py  _wr90_port_oracle_matrix.py  capture_msl_replay_fixture.py  check_api_reference.py  check_gallery_v2_manifests.py  check_public_docs_manifest.py  check_public_docs_sync.py  compare_optimizer_memory_paths.py  convergence_grid.py  diagnose_VI_at_wall.py  diagnose_VI_compare_A_vs_B2.py  diagnose_VI_compare_visualize.py  diagnose_VI_phase_compare.py  diagnose_VI_timeseries_dump.py  diagnose_VI_timeseries_visualize.py  diagnose_field_past_wall_check.py  diagnose_field_trace_at_wall_v2.py  diagnose_field_trace_at_wall_v3.py  diagnose_gated_DFT.py  diagnose_pec_short_8pct_residual.py  diagnose_probe_offset_sweep.py  diagnose_tfsf_directional_leakage.py  diagnose_tfsf_upstream_probe.py  export_public_docs_to_gitops.py  gpu_verify_issues.py  isolate_extractor_vs_engine.py  issue13_gpu_compiler_probe.py  issue13_runtime_validation.py  issue31_ad_memory_sweep.py  issue31_big_smoke.py  issue31_ffrp_deepdive.py  issue31_nu_physics_pin.py  issue31_patch_validation.py  (+53 more)
studio/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tests/: test_ad_diagnostics.py  test_ad_surface_contract.py  test_adi.py  test_adi_gradient.py  test_adi_preflight.py  test_agent_control_plane.py  test_agent_friendly_workflow.py  test_amr_surrogate.py  test_analysis_studies_replay.py  test_animation.py  test_antenna.py  test_api.py  test_api_private_surface_guard.py  test_artifacts.py  test_auto_config.py  test_auto_guard.py  test_auto_preflight.py  test_batch.py  test_batch_provenance.py  test_boundary_cpml_asymmetric.py  test_boundary_cpml_oracle.py  test_boundary_pmc_composition.py  test_boundary_pmc_distributed.py  test_boundary_pmc_guard.py  test_boundary_pmc_hi_faces.py  test_boundary_pmc_oracle.py  test_boundary_pmc_runtime.py  test_boundary_spec.py  test_boundary_spec_preflight.py  test_boundary_spec_thickness.py  test_calibration_dispersive_recovery.py  test_calibration_joint_nuisance.py  test_calibration_s11_synthetic.py  test_calibration_uq.py  test_canonical_experiment_v2.py  test_cavity.py  test_cfs_cpml.py  test_coax_broad_e4_comparison_gates.py  test_coax_broad_e5_envelope_gates.py  test_coax_end_to_end_ad.py  (+325 more)
validation/: README.md
(+819 files in other folders)
