[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfx"
version = "0.1.0"
description = "JAX-based RF FDTD electromagnetic simulator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Byungkwan Kim", email = "byungkwan.kim@cnu.ac.kr"},
]
keywords = ["fdtd", "electromagnetics", "jax", "rf", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "matplotlib>=3.7",
    "h5py>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]
opt = [
    "optax>=0.1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
