[build-system]
requires = ["setuptools>=64,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfx-fdtd"
version = "1.3.1"
description = "JAX-native 3D FDTD electromagnetic simulator for RF engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "REMI Lab", email = "byungkwan.kim@cnu.ac.kr"}]
keywords = ["fdtd", "electromagnetics", "jax", "rf", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "h5py>=3.8",
]

[project.optional-dependencies]
optimization = ["optax>=0.1.7"]
visualization = ["matplotlib>=3.7", "pillow"]
dashboard = ["streamlit>=1.30"]
dev = ["pytest>=7.0", "pytest-xdist", "ruff"]
all = ["rfx[optimization,visualization,dashboard,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
