[build-system]
requires = ["setuptools>=64,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfx-fdtd"
version = "1.6.4"
description = "JAX-native 3D FDTD electromagnetic simulator for RF engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "REMI Lab", email = "byungkwan.kim@cnu.ac.kr"}]
keywords = ["fdtd", "electromagnetics", "jax", "rf", "simulation"]
classifiers = [
    # Beta matches the README status language: reference (uniform Yee RF)
    # lane validated; advanced lanes promoted only inside documented
    # evidence envelopes.
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "h5py>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
optimization = ["optax>=0.1.7"]
visualization = ["matplotlib>=3.7", "pillow"]
dashboard = ["streamlit>=1.30"]
dev = ["pytest>=7.0", "pytest-xdist", "pytest-split", "ruff"]
all = ["rfx[optimization,visualization,dashboard,dev]"]

[project.urls]
Homepage = "https://remilab.ai/rfx/"
Repository = "https://github.com/bk-squared/rfx"
Documentation = "https://remilab.ai/rfx/"
Changelog = "https://github.com/bk-squared/rfx/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["rfx*"]

[tool.setuptools.package-data]
rfx = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not gpu and not slow and not slow_physics'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: tests that need GPU — too slow on CPU or GPU-specific (select with '-m gpu')",
    "distributed: tests that require multi-device / distributed setup (deselect with '-m not distributed')",
    "slow_physics: release-tag-time physics regression gate (V173-A bit-identity); opt-in with '-m slow_physics'",
]
